<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="de.blankedv.sx4control.MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item
            android:id="@+id/action_reconnect"
            android:orderInCategory="105"
            android:title="@string/action_reconnect"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_about"
            android:orderInCategory="110"
            android:title="@string/action_about"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_exit"
            android:orderInCategory="115"
            android:title="@string/action_exit"
            app:showAsAction="never"/>

</menu>
