<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/connected_to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:text="@string/unknown"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/versionUnknown"
            android:textSize="14sp"
            android:padding="12sp" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/copyrightString"
            android:textSize="14sp"
            android:padding="12sp" />
        <!-- <TextView android:id="@+id/help" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp" android:textSize="16sp" android:autoLink="all"
            android:text="@string/helpString"/> -->
        <TextView
            android:id="@+id/moreinfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/moreInfoString"
            android:padding="12sp"
            android:textSize="16sp"
            android:autoLink="all" />
        <!--		<TextView android:id="@+id/moreinfo2" android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp" android:textSize="14sp" android:autoLink="all"
                    android:text="@string/moreInfoString"/>
                <TextView android:id="@+id/moreinfo3" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:text=""
                    android:paddingTop="8sp" android:textSize="12sp" android:autoLink="all" /> -->
        <!-- 		<Button android:id="@+id/upload" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:text="upload debug file"
                    android:textSize="22sp" android:paddingTop="10sp" /> -->
        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:text="@string/cancel"
            android:padding="6dip"
            android:textSize="18dip"
            android:elevation="3dip"
            android:minHeight="32dip" />
    </LinearLayout>
</ScrollView>