<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="de.blankedv.sx4control.MainActivity">

    <SeekBar
            android:id="@+id/speedBar2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seek_bar"
            android:thumb="@drawable/seek_thumb"
            android:padding="30dp"
            android:max="31"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="0px"
                  android:layout_weight="3"
                  android:background="@android:color/background_dark"
                  android:orientation="horizontal">
        <ImageView
                android:id="@+id/loco_icon"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="6"
                android:src="@drawable/genloco"
                android:contentDescription="@string/locoicon"/>

        <TextView
                android:id="@+id/tvAddr"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="24sp"
                android:contentDescription="@string/loco_address"/>
        <de.blankedv.sx4control.PowerButton
                android:id="@+id/powerBtn"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:background="@android:color/background_dark"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="0px"
                  android:layout_weight="3"
                  android:background="@android:color/background_dark"
                  android:orientation="horizontal">
        <de.blankedv.sx4control.FunctionButton
                android:id="@+id/f0"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="25"
                android:text="@string/f0"
                android:textSize="22sp"/>
        <de.blankedv.sx4control.FunctionButton
                android:id="@+id/f1"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="25"
                android:text="@string/f1"
                android:textSize="22sp"/>
        <ImageButton
                android:id="@+id/changeBtn"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="25"
                android:src="@drawable/right2"
                android:textSize="22sp" android:contentDescription="@string/direction"/>
        <Button
                android:id="@+id/stopBtn"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="25"
                android:text="@string/stop_loco"
                android:textSize="14sp"/>
    </LinearLayout>
    <ListView
            android:id="@+id/channelView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

    </ListView>
</LinearLayout>


