<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="de.blankedv.sx4control.MainActivity"
        android:background="@android:color/background_dark">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="0px"
                  android:layout_weight="5"
                  android:padding="5dp"
                  android:background="@android:color/background_dark"
                  android:orientation="horizontal">
        <FrameLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/rounded_view">

            <SeekBar
                    android:id="@+id/speedBar2"
                    android:layout_width="190dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:rotation="270"
                    android:padding="30dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:max="31"
                    android:thumb="@drawable/seek_thumb"
            />

        </FrameLayout>
        <!--<de.blankedv.sx4control.VSeekBar
                android:id="@+id/speedBar2"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:progressDrawable="@drawable/seek_bar"
                android:thumb="@drawable/seek_thumb"
                android:padding="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:max="31"
                android:background="@drawable/rounded_view"/> -->
        <TableLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="8"
                android:layout_gravity="bottom">

            <TableRow android:layout_width="match_parent"
                      android:layout_height="0px"
                      android:layout_weight="6">
                <ImageView
                        android:id="@+id/loco_icon"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="6"
                        android:src="@drawable/genloco"
                        android:contentDescription="@string/locoicon"/>
                <TextView
                        android:id="@+id/tvAddr"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/addressValue"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:contentDescription="@string/loco_address"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="0px"
                      android:layout_weight="6"
                      android:layout_gravity="bottom"
                      android:background="@android:color/background_dark">
                <de.blankedv.sx4control.FunctionButton
                        android:id="@+id/f0"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/f0"
                        android:textSize="20sp"/>
                <de.blankedv.sx4control.FunctionButton
                        android:id="@+id/f1"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/f1"
                        android:textSize="20sp"/>
                <de.blankedv.sx4control.FunctionButton
                        android:id="@+id/changeBtn"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:contentDescription="@string/direction"/>
                <de.blankedv.sx4control.FunctionButton
                        android:id="@+id/stopBtn"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/stop_loco"
                        android:textSize="18sp"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
    <ListView
            android:id="@+id/channelView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8" android:background="#d3f8d1">

    </ListView>
</LinearLayout>


